--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,20 +31,7 @@
     </button>
 
     <!-- Enlaces del menú -->
-    <div class="collapse navbar-collapse justify-content-end nav-links" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#servicios">Servicios</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#proyectos">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contacto">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+    
 </nav>
 
 
@@ -220,9 +207,9 @@
   <!-- Footer -->
   <footer class="text-center">
   <div class="py-3" style="line-height: 1.6;">
-    <p>📍 <strong>Dirección:</strong> Villa Mayor Sur 425, Quilicura</p>
-    <p>✉️ <strong>Correo:</strong> <a href="mailto:contacto@novotechspa.cl" style="color: #aadcea; text-decoration: none;">contacto@novotechspa.cl</a></p>
-    <p>© 2015 <strong>Novotech S.P.A.</strong> Todos los derechos reservados.</p>
+    <p>📍 <strong>Dirección:</strong> Ramon Subercaseaux 1268 , San Miguel</p>
+    <p>✉️ <strong>Correo:</strong> <a href="mailto:contacto@novotechspa.cl" style="color: #aadcea; text-decoration: none;">luisurrutia@novotechspa.cl</a></p>
+    <p>© <strong>Novotech S.P.A.</strong> Todos los derechos reservados.</p>
   </div>
 </footer>
 <!-- Bootstrap JS Bundle -->
