--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,6 +39,9 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url 'contacto' %}">Contáctanos</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'quienes_somos' %}">Quiénes Somos</a>
+    </li>
   </ul>
 </div>
 
@@ -172,7 +175,7 @@
     <h4>Leadjet CIJ</h4>
     <p>Impresora de inyección continua ideal para líneas de alta velocidad. Codificación en envases plásticos, vidrio y más. Tecnología eficiente para impresión sin contacto.</p>
     <p><strong>Referencia técnica:</strong> Tecnología CIJ sin contacto. Alta velocidad y precisión para entornos industriales. Compatible con tinta base solvente y pigmentada. Ideal para alimentos, bebidas y farmacéutica.</p>
-    <a href="#contacto" class="btn btn-outline-primary mt-2">Solicitar Información</a>
+    <a href="{% url 'contacto' %}" class="btn btn-outline-primary mt-2">Solicitar Información</a>
   </div>
 </div>
 
@@ -200,7 +203,7 @@
     <div class="col-6">
       <h4>Láser FiberJet X20</h4>
       <p>Equipo de codificación por láser de fibra para marcaje permanente sin consumibles. Precisión en líneas automatizadas con mínimo mantenimiento.</p>
-      <a href="#contacto" class="btn btn-outline-primary mt-2">Solicitar Información</a>
+      <a href="{% url 'contacto' %}" class="btn btn-outline-primary mt-2">Solicitar Información</a>
     </div>
   </div>
 </section>
