--- a/home/templates/contacto.html
+++ b/home/templates/contacto.html
@@ -44,6 +44,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="{% url 'contacto' %}">Contáctanos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{% url 'quienes_somos' %}">Quiénes Somos</a>
+        </li>
       </ul>
     </div>
   </div>
