--- a/home/templates/quienes_somos.html
+++ b/home/templates/quienes_somos.html
@@ -29,7 +29,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto nav-links">
-        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Máquinas</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Codificadoras/Insumos</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contáctanos</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'quienes_somos' %}">Quiénes Somos</a></li>
 
