--- a/home/templates/maquinas.html
+++ b/home/templates/maquinas.html
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto nav-links">
         <li class="nav-item">
-          <a class="nav-link active" href="{% url 'maquinas' %}">Codificadoras/Insumos</a>
+          <a class="nav-link" href="{% url 'maquinas' %}">Codificadoras/Insumos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'contacto' %}">Contáctanos</a>
