--- a/static/css/maquinas.css
+++ b/static/css/maquinas.css
@@ -161,3 +161,10 @@ footer {
 section.container {
   margin-top: 120px; /* Puedes ajustar este valor */
 }
+
+/* Tamaño uniforme de imágenes dentro de las tarjetas */
+.resumen-card img {
+  height: 180px;
+  width: 100%;
+  object-fit: contain;
+}
