--- a/home/templates/maquinas.html
+++ b/home/templates/maquinas.html
@@ -136,7 +136,7 @@
       <div id="carouselV8860" class="carousel slide mb-3" data-bs-ride="carousel">
         <div class="carousel-inner rounded">
           <div class="carousel-item active">
-            <img src="{% static 'v8860.png' %}" class="d-block w-100" alt="V8860">
+            <img src="{% static 'V8860.png' %}" class="d-block w-100" alt="V8860">
           </div>
           <div class="carousel-item">
             <img src="{% static 'Muestra v8860.png' %}" class="d-block w-100" alt="Muestra V8860">
